fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  overflow-y: hidden;
+  overflow-y: scroll;
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
